Really fix background size
Oh, well. Now too small slides didn't fill the whole screen ...

--- a/src/style.less
+++ b/src/style.less
@@ -8,8 +8,16 @@
  * License, or (at your option) any later version.
  */
 
+/*
 html, body {
     min-height: 100%;
+}
+*/
+html{
+  height: 100%;
+}
+body {
+  min-height: 100%;
 }
 
 :local(.container) {
